@@ -23,11 +23,12 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <encoding>utf-8</encoding>
+          <source>17</source>
+          <target>17</target>
           <compilerArgs>
             <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
+            <arg>--add-exports</arg>
+            <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -111,8 +112,11 @@
               </additionalResources>
 
               <vmArgs>
-                <vmArg>-Djna.library.path=/usr/local/lib</vmArg>
-                <vmArg>-Djava.library.path=.</vmArg>
+                <vmArg>--add-opens</vmArg>
+                <vmArg>java.desktop/com.apple.eawt=ALL-UNNAMED</vmArg>
+                <vmArg>--add-opens</vmArg>
+                <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
+                <vmArg>-Djna.library.path=/usr/local/lib:.</vmArg>
                 <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                 <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
               </vmArgs>
@@ -175,6 +179,8 @@
         <version>3.0.0-M7</version>
         <configuration>
           <argLine>
+            --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             -Djna.library.path=/usr/local/lib
           </argLine>
@@ -209,9 +215,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>vavi</groupId>
+      <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.7-SNAPSHOT</version>
+      <version>1.1.7</version>
     </dependency>
     <dependency>
       <groupId>vavi</groupId>
@@ -234,14 +240,14 @@
       <version>0.0.2</version>
     </dependency>
     <dependency>
-      <groupId>vavi</groupId>
+      <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-awt</artifactId>
-      <version>1.0.6-SNAPSHOT</version>
+      <version>1.0.6</version>
     </dependency>
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-util-logging-asl</artifactId>
-      <version>0.0.1</version>
+      <version>0.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.rococoa</groupId>
@@ -255,8 +261,8 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.araxeus</groupId>
-      <artifactId>dnnsuperres</artifactId>
+      <groupId>vavi</groupId>
+      <artifactId>vavi-image-filter-dnnsuperres</artifactId>
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
     <dependency> <!-- why not included -->
@@ -272,6 +278,12 @@
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
 -->
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>2.0.3</version>
+    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
